# Turtlebot3_DNN_Nav

./: Collision_CNN.ipynb  README.md  empty2.world  new_DNN_collision.ipynb  turtlebot3_empty_wall.world  turtlebot3_empty_wall2.world  turtlebot3_empty_world2.launch
210705_collision_prob/knu_prj/: label.txt  package.xml
210706_collision_updated/knu_prj/: label_collision.txt  new_DNN.ipynb  new_DNN_collision.ipynb
210716_coll_4classes/knu_prj/: New_collision_test.ipynb
211027_global_planning/knu_prj/: CMakeLists.txt  label3.txt  new_DNN_collision.ipynb  new_label_res.txt
box_plugins/: .box_linear.cc.swp  .box_plugin.cc.swp  CMakeLists.txt  box_linear.cc  box_plugin.cc  obstacle_plugin.cc  obstacle_plugin_rd.cc
dnn_navigation/: CMakeLists.txt  test.py
dnn_navigation/launch/: Turtlesim.launch  chat.launch
dnn_navigation/msg/: knuRos.msg
dnn_navigation/src/: camera_stream.cpp  listener.cpp  turtlesim_depth_control.py
iasl_huno_real/: DNN_nav2.ipynb  label.txt
knu_prj/: CMakeLists.txt  New_collision_test2.ipynb  label2.txt  label_test.txt  package.xml  test.py
knu_prj/res_collision_model_new2/: saved_model.pb
knu_prj/res_collision_model_new_4_classes_0_labeled_double/: keras_metadata.pb  saved_model.pb
knu_prj/res_collision_model_new_4_classes_0_labeled_small/: saved_model.pb
knu_prj/src/: depth_change.py  (+6 more)
opencv/: CMakeLists.txt  label.py
remastered_model_220121/: keras_metadata.pb  saved_model.pb
src/: save_image_and_label.py  turtle_depth_goal_real_remastered.py
videos/: (5,7,4move).mkv  simplescreenrecorder-2021-10-24_03.24.30.mkv
(+78 files in other folders)
